--- a/data/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
+++ b/data/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
@@ -26,5 +26,7 @@ Osmangazi / Bursa.
 
 ![Karabaş-ı Veli Dergahı Kültür Merkezi](/images/jejak-sang-pencinta-sejati-di-bursa-2.png)
 
-Bangunan ini telah berdiri sekitar 450 tahun lamanya. Pada masa awalnya digunakan untukmempelajari tarekat halwatiyah dan kini digunakan untuk tarekat Mawlawiyah. Di sisi kanannya terdapat makam-makam dari para wali pendahulu. Didalamnya juga terdapat perpustakaan mini serta ruang tamu untuk tamutamu penting. Di ini tarian sufi juga ditarikan oleh penari dari berbagai usia. Mereka mempelajari tarian ini selama 3 sampai 4 bulan. Pertunjukan tari sufi diadakan setiap malam dan dimulai dari pukul 21.00 serta berlangsung selama setengah jam. Penonton laki-laki di lantai bawah dan perempuan di lantai atas. Penonton juga dapat meminum teh sepuasnya dengan gratis di tempat ini. Bagaimana Sobat YA? Pasti asyikkan mengunjungi tempat baru sekaligus mempelajari sejarahnya? Jadi, sekali merengkuh dayung, dua, tiga pulau terlampaui. Kita juga dapat mengambil hikmah dari setiap sejarah yang kita pelajari serta menerapkannya dalam kehidupan sehari-hari agar menjadi manusia yang selalu emperbaiki
+Bangunan ini telah berdiri sekitar 450 tahun lamanya. Pada masa awalnya digunakan untukmempelajari tarekat halwatiyah dan kini digunakan untuk tarekat Mawlawiyah. Di sisi kanannya terdapat makam-makam dari para wali pendahulu. Didalamnya juga terdapat perpustakaan mini serta ruang tamu untuk tamutamu penting. Di ini tarian sufi juga ditarikan oleh penari dari berbagai usia. Mereka mempelajari tarian ini selama 3 sampai 4 bulan. Pertunjukan tari sufi diadakan setiap malam dan dimulai dari pukul 21.00 serta berlangsung selama setengah jam. Penonton laki-laki di lantai bawah dan perempuan di lantai atas.
+
+Penonton juga dapat meminum teh sepuasnya dengan gratis di tempat ini. Bagaimana Sobat YA? Pasti asyikkan mengunjungi tempat baru sekaligus mempelajari sejarahnya? Jadi, sekali merengkuh dayung, dua, tiga pulau terlampaui. Kita juga dapat mengambil hikmah dari setiap sejarah yang kita pelajari serta menerapkannya dalam kehidupan sehari-hari agar menjadi manusia yang selalu emperbaiki
 diri dan bias menjadi pribadi yang lebih baik dari sebelumnya. [khf]
