--- a/data/posts/menjadi-indonesia.mdx
+++ b/data/posts/menjadi-indonesia.mdx
@@ -2,7 +2,8 @@
 slug: 'menjadi-indonesia'
 title: 'Menjadi Indonesia'
 featuredpost: true
-featuredimage: https://images.unsplash.com/photo-1502977266157-4dbae1582d9f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mzh8fGluZG9uZXNpYSUyMGZsYWd8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60
+featuredimage: ''
+featuredimageurl: 'https://images.unsplash.com/photo-1502977266157-4dbae1582d9f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mzh8fGluZG9uZXNpYSUyMGZsYWd8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
 excerpt: Menurut Anderson (2006), seorang Indonesianis yang berpendapat tentang kebangsaan orang Indonesia tercipta karena adanya print-language yaitu Bahasa Indonesia yang menjadi konsensus bangsa ketika disepakati oleh para pemuda pada tahun 1928.
 date: 2020-08-19
 author: jelang-ramadhan
