change featuredimageurl widget to string

--- a/data/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
+++ b/data/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
@@ -2,7 +2,7 @@
 slug: 'plesiran-menuju-eropa-menjangkau-edirne'
 title: 'Plesiran Menuju Eropa: Menjangkau Edirne'
 featuredpost: false
-featuredimage: https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Selimiye_Mosque_%2815051985908%29_%28cropped%29.jpg/800px-Selimiye_Mosque_%2815051985908%29_%28cropped%29.jpg
+featuredimageurl: https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Selimiye_Mosque_%2815051985908%29_%28cropped%29.jpg/800px-Selimiye_Mosque_%2815051985908%29_%28cropped%29.jpg
 excerpt: Entah apa yang membawa langkah kakiku menuju ibu kota Utsmani ke-2, Edirne.
 date: 2020-02-03
 author: xequoia
