--- a/data/posts/marsinah-perempuan-yang-abadi-bersama-waktu.mdx
+++ b/data/posts/marsinah-perempuan-yang-abadi-bersama-waktu.mdx
@@ -2,7 +2,7 @@
 slug: 'marsinah-perempuan-yang-abadi-bersama-waktu'
 title: 'Marsinah: Perempuan yang Abadi Bersama Waktu'
 featuredpost: false
-featuredimage: https://assets-a2.kompasiana.com/items/album/2018/05/08/malam-5af11808bde57564533527b2.jpg?t=o&v=760
+featuredimageurl: https://assets-a2.kompasiana.com/items/album/2018/05/08/malam-5af11808bde57564533527b2.jpg?t=o&v=760
 excerpt: Marsinah, perempuan yang berani. Lantang suaranya menentang kesewenang-wenangan. Sosok perempuan yang tulus dan setia kawan.
 date: 2020-04-01
 author: dammy
