change routes name from read to magazine and articles to read

--- a/data/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
+++ b/data/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
@@ -10,7 +10,9 @@ tags:
   - plesiran
 ---
 
-Entah apa yang membawa langkah kakiku menuju ibu kota Utsmani ke-2, Edirne. Mungkin dari salah satu artikel di buku belajar bahasa Turki yang menyebutkan keagungan dan kecerdikan Mimar Sinan, perancang Selimiye Camii, ketika diminta oleh Sultan Selim membuatkan masjid atas namanya. Mungkin juga kerinduan melakukan perjalanan dengan kereta, membawa nostalgia jauh ke masa kecilku. Atau mungkin, pelarian dari semua kepenatan rutinitas kehidupan sehari-hari yang monoton, yang membuat diri ini serasa robot, melakukan hal yang sama dari hari ke hari.
+> Entah apa yang membawa langkah kakiku menuju ibu kota Utsmani ke-2, Edirne. Mungkin dari salah satu artikel di buku belajar bahasa Turki yang menyebutkan keagungan dan kecerdikan Mimar Sinan, perancang Selimiye Camii, ketika diminta oleh Sultan Selim membuatkan masjid atas namanya.
+
+Mungkin juga kerinduan melakukan perjalanan dengan kereta, membawa nostalgia jauh ke masa kecilku. Atau mungkin, pelarian dari semua kepenatan rutinitas kehidupan sehari-hari yang monoton, yang membuat diri ini serasa robot, melakukan hal yang sama dari hari ke hari.
 
 Perjalanan dimulai dari Istanbul. Bagaimana cara menggunakan kereta sudah kucari tahu jauh-jauh hari. Dari pusat kota, aku dan kawan-kawan menuju Stasiun Halkalı menggunakan Marmaray. Dari loket kami membeli 3 tiket seharga 18,5 lira, harga diskon 20 persen untuk pelajar. Mengira waktu keberangkatan masih lama, kami pergi ke minimarket terdekat membeli kebutuhan selama perjalanan. Memang waktu masih menunjukkan setengah jam menuju waktu keberangkatan, sesampainya di peron, terheran-heranlah kami, melihat orang-orang ramai berlalu-lalang mencari tempat duduk, sementara yang dicari tak terlihat keberadaannya. Di situlah kami disambar kenyataan, kereta ini tak menetapkan posisi tempat duduk. Siapa cepat dia dapat, prinsipnya.
 
