--- a/posts/mengenal-sistem-kartel-perdagangan.mdx
+++ b/posts/mengenal-sistem-kartel-perdagangan.mdx
@@ -7,7 +7,7 @@ excerpt: 'Sobat YA! tercinta, pasti kalian pernah mendengar atau membaca istilah
 date: 2019-08-28
 author: widya-pintaka-bayu-putra
 tags:
-  - sains
+  - knowledge
 ---
 
 Sobat YA! tercinta, pasti kalian pernah mendengar atau membaca istilah kartel baik di televisi atau internet. Kartel adalah sekelompok pelaku usaha (perusahaan besar milik negara atau swasta) yang setuju untuk berkolusi dan melakukan suatu koordinasi perilaku/tindakan melalui suatu perjanjian untuk mencegah persaingan antar perusahaan di pasar yang bersangkutan, sehingga mereka dapat bertindak sebagai monopolis tunggal dan mendapatkan keuntungan (KPPU, 2017). Rokan (2010) menyatakan bahwa kartel adalah kerja sama dari produsen-produsen produk tertentu yang bertujuan untuk mengawasi produksi, penjualan dan harga serta untuk melakukan monopoli terhadap komoditas atau industri tertentu. Selain itu definisi kartel yang lain adalah persetujuan kelompok perusahaan dengan maksud mengendalikan harga komoditas tertentu serta mengendalikan perusahaan besar yang memproduksi barang yang sejenis (Balai Pustaka, 2001).
