fix article image url

--- a/posts/spring-fragrances-2021.mdx
+++ b/posts/spring-fragrances-2021.mdx
@@ -28,7 +28,7 @@ Parfum ini memiliki aroma yang manis dan segar. Kemasannya yang berwarna hitam m
 
 3. ZARA Wonder Rose
 
-![ZARA Wonder Rose](<[https://res.cloudinary.com/yacloud/image/upload/v1618140833/articles%20pictures/zara_xcfy8n.webp](https://res.cloudinary.com/yacloud/image/upload/v1618140833/articles%20pictures/zara_xcfy8n.webp)>)
+![enter image description here](https://res.cloudinary.com/yacloud/image/upload/v1618149368/articles%20pictures/zara_gvsjvk.jpg)
 Sumber: [https://instagram.com/zara](https://instagram.com/zara)
 
 Kali ini parfumnya datang dari salah satu brand yang sangat terkenal, yaitu ZARA. Bagi _Sobat Ya!_ yang menyukai aroma _feminine_ dan _floral, this is for you guys_. Perpaduan aroma _peach_, _red berries, rose, violet, cedar wood, vanilla,_ dan _musk_ menghasilkan aroma yang semerbak. Pada semprotan pertama kalian mungkin akan merasa wanginya cukup menyengat, namun setelah beberapa lama wanginya akan melembut dan cukup tahan lama walau _Sobat Ya!_ beraktivitas di luar ruangan.
