add articles and remove hero animation for mobile

--- a/posts/10-tips-sederhana-untuk-mengurangi-kecanduan-game.mdx
+++ b/posts/10-tips-sederhana-untuk-mengurangi-kecanduan-game.mdx
@@ -8,7 +8,7 @@ excerpt: 'Tidak ada satupun di dunia ini yang baik jika dilakukan secara berlebi
 date: 2020-05-01
 author: aisyah-dhianisa
 tags:
-  - lifehack
+  - lifestyle
 ---
 
 Tidak ada satupun di dunia ini yang baik jika dilakukan secara berlebihan, begitu juga dengan aktifitas gaming yang digandrungi banyak kalangan ini. Kegemaran bermain game ini akan berdampak pada hingga membuat lupa waktu sampai lupa segala hal. Bahkan bermain game merupakan resiko yang perlu diwaspadai menurut Badan Kesehatan Dunia (WHO) tahun 2018, gaming disorder atau kecanduan game sudah masuk dalam klasifikasi International Classification of Diseases (ICD)-DSM. Nah, berikut ini tips yang kamu butuhkan!
