--- a/posts/dibalik-sudoku.mdx
+++ b/posts/dibalik-sudoku.mdx
@@ -3,7 +3,7 @@ slug: 'dibalik-sudoku'
 title: 'Dibalik Sudoku'
 featuredpost: false
 featuredimage: ''
-featuredimageurl: 'https://i.insider.com/589e1b653149a162308b5243?width=700'
+featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618839089/articles%20pictures/leonhard-euler_ugcl4b.jpg'
 excerpt: 'Game yang mengasah logika, mengasah kepintaran dalam mengotak-atik angka. Memainkannya membutuh konsentrasi dan kesabaran penuh.'
 date: 2020-05-01
 author: deyafri
