add articles, fix hero title

--- a/posts/aturan-baru-bea-cukai.mdx
+++ b/posts/aturan-baru-bea-cukai.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://images.unsplash.com/photo-1578335371893-da19ce4ba0cc?
 excerpt: 'Berbelanja barang dari luar negeri? Mengirim barang masuk ke Indonesia? Sobat Ya! pernah melakukannya? Kalau pernah, artikel ini cocok dibaca sambil nge-cay di sore hari. Atau kapanpun artikel ini enak dibaca. Siapa tahu dengan artikel ini bisa menambah wawasan kita semua.'
 date: 2021-04-19
 author: hisyam-azhari
-tags:
-  - opini
+tags: opini
 ---
 
 Berbelanja barang dari luar negeri? Mengirim barang masuk ke Indonesia? Sobat Ya! pernah melakukannya? Kalau pernah, artikel ini cocok dibaca sambil nge-cay di sore hari. Atau kapanpun artikel ini enak dibaca. Siapa tahu dengan artikel ini bisa menambah wawasan kita semua.
