--- a/posts/dibalik-sudoku.mdx
+++ b/posts/dibalik-sudoku.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618839089/a
 excerpt: 'Game yang mengasah logika, mengasah kepintaran dalam mengotak-atik angka. Memainkannya membutuh konsentrasi dan kesabaran penuh.'
 date: 2020-05-01
 author: deyafri
-tags:
-  - tokoh
+tags: tokoh
 ---
 
 _Game_ yang mengasah logika, mengasah kepintaran dalam mengotak-atik angka. Memainkannya membutuh konsentrasi dan kesabaran penuh. Selain mengasah kepintaran, _game_ ini juga mengajarkan para pemainnya untuk terus berusaha dan tak mudah putus asa. _Game_ ini telah lahir ke dunia sebelum aku lahir. Teka-teki angka sederhana ini terdiri dari kotak berukuran 9x9 (9 baris dan 9 kolom) dan dibagi lagi menjadi 9 kotak kecil, masing-masing kotak berukuran 3x3. Jika terdapat kolom yang kosong, maka itulah tugas kita untuk menempatkan angka yang cocok. Kelihatannya mudah, tapi butuh ketelitian. Dari kriteria tersebut sudah kenal dengan jenis _game_ yang satu ini?
