--- a/posts/dubrovnik-tempat-menjadi-penduduk-kings-landing-dari-game-of-thrones.mdx
+++ b/posts/dubrovnik-tempat-menjadi-penduduk-kings-landing-dari-game-of-thrones.mdx
@@ -6,8 +6,7 @@ featuredimageurl: https://images.unsplash.com/photo-1555990794-6d00be0d6f95?ixid
 excerpt: Banyak yang bilang kalau mengunjungi satu negara Balkan bisa dianggap mengunjungi semua negara-negara Balkan yang lain.
 date: 2019-08-28
 author: bojez97
-tags:
-  - plesiran
+tags: plesiran
 ---
 
 Banyak yang bilang kalau mengunjungi satu negara Balkan bisa dianggap mengunjungi semua negara-negara Balkan yang lain. Gak salah sih, karena bangunan-bangunan indah yang mereka miliki terbilang mirip. Walaupun dari setiap negara pasti memiliki keunikan dan ciri khasnya tersendiri.
