--- a/posts/jangan-kuliah-di-turki.mdx
+++ b/posts/jangan-kuliah-di-turki.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618834927/a
 excerpt: 'Pergi kuliah ke luar negeri ternyata tak seindah yang dibayangkan. Pergi kuliah ke luar negeri juga tak seindah foto di Instagram. Kuliah di luar negeri tak semudah yang diiklankan agen-agen yang kurang bertanggung jawab.'
 date: 2021-04-19
 author: dammy
-tags:
-  - opini
+tags: opini
 ---
 
 Pergi kuliah ke luar negeri ternyata tak seindah yang dibayangkan. Pergi kuliah ke luar negeri juga tak seindah foto di Instagram. Kuliah di luar negeri tak semudah yang diiklankan agen-agen yang kurang bertanggung jawab. Kuliah di luar negeri itu harus kuat-kuat menahan godaan, entah itu untuk jalan-jalan, untuk main, untuk pelesiran, dan hal menggoda lainnya. Kuliah di luar negeri itu auto belajar keras tentang manajemen.
