--- a/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
+++ b/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
@@ -6,8 +6,7 @@ featuredimage: /images/jejak-sang-pencinta-sejati-di-bursa.png
 excerpt: Dalam kehidupan kita, banyak sekali hal-hal yang dapat kita lakukan untuk sekedar melarikan diri dari penatnya rutinitas yang kita jalani sehari-hari.
 date: 2019-03-02
 author: ahsanah-nur-amalia
-tags:
-  - plesiran
+tags: plesiran
 ---
 
 Dalam kehidupan kita, banyak sekali hal-hal yang dapat kita lakukan untuk sekedar melarikan diri dari penatnya rutinitas yang
