--- a/posts/marsinah-perempuan-yang-abadi-bersama-waktu.mdx
+++ b/posts/marsinah-perempuan-yang-abadi-bersama-waktu.mdx
@@ -6,8 +6,7 @@ featuredimageurl: https://assets-a2.kompasiana.com/items/album/2018/05/08/malam-
 excerpt: Marsinah, perempuan yang berani. Lantang suaranya menentang kesewenang-wenangan. Sosok perempuan yang tulus dan setia kawan.
 date: 2020-04-01
 author: dammy
-tags:
-  - tokoh
+tags: tokoh
 ---
 
 _Marsinah buruh pabrik arloji,  
