--- a/posts/menjadi-indonesia.mdx
+++ b/posts/menjadi-indonesia.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://images.unsplash.com/photo-1502977266157-4dbae1582d9f?
 excerpt: Menurut Anderson (2006), seorang Indonesianis yang berpendapat tentang kebangsaan orang Indonesia tercipta karena adanya print-language yaitu Bahasa Indonesia yang menjadi konsensus bangsa ketika disepakati oleh para pemuda pada tahun 1928.
 date: 2020-08-19
 author: jelang-ramadhan
-tags:
-  - opini
+tags: opini
 ---
 
 Menurut Anderson (2006), seorang Indonesianis yang berpendapat tentang kebangsaan orang Indonesia tercipta karena adanya print-language yaitu Bahasa Indonesia yang menjadi konsensus bangsa ketika disepakati oleh para pemuda pada tahun 1928. Meskipun pada awal kemerdekaan, hampir mayoritas penduduk Indonesia berbicara bahasa ibu atau bahasa sukunya masing-masing, tapi kini jutaan pemuda/pemudi Indonesia telah menjadikan Bahasa Indonesia sebagai mother-tongue yang didorong oleh faktor latar etnolinguistik. Jika membandingkan dengan negara-negara Afrika yang juga pernah dijajah oleh bangsa Eropa, banyak bangsa yang telah kehilangan bahasa aslinya dan telah digantikan oleh bahasa penjajahnya, tetapi Indonesia dengan nasionalismenya mampu berkompromi untuk bersatu dalam ikatan bahasa persatuan.
