--- a/posts/once-upon-a-try-virtual-museum.mdx
+++ b/posts/once-upon-a-try-virtual-museum.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://images.unsplash.com/photo-1564408918432-4b93b213cfb5?
 excerpt: 'Selama menjalani masa self quarantine, banyak hal yang dapat kita lakukan dirumah saja, salah satunya kita dapat melakukan virtual tour.'
 date: 2020-05-01
 author: adinda-pancaring
-tags:
-  - plesiran
+tags: plesiran
 ---
 
 Selama menjalani masa self quarantine, banyak hal yang dapat kita lakukan dirumah saja, salah satunya kita dapat melakukan virtual tour.
