--- a/posts/pahlawan-tanah-pasundan.mdx
+++ b/posts/pahlawan-tanah-pasundan.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1619416576/a
 excerpt: 'Peringatan Hari Kartini yang jatuh pada 21 April semoga benar-benar dimaknai lebih dalam dari ucapan “Selamat Hari Kartini. Perilaku, semangat, dan kemandirian Kartini semoga bisa menjadi dorongan untuk wanita-wanita Indonesia untuk berkarya.'
 date: 2021-04-26
 author: ghoniyyah-salma
-tags:
-  - knowledge
+tags: knowledge
 ---
 
 Peringatan Hari Kartini yang jatuh pada 21 April semoga benar-benar dimaknai lebih dalam dari ucapan “Selamat Hari Kartini. Perilaku, semangat, dan kemandirian Kartini semoga bisa menjadi dorongan untuk wanita-wanita Indonesia untuk berkarya.
