--- a/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
+++ b/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
@@ -6,8 +6,7 @@ featuredimageurl: https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Seli
 excerpt: Entah apa yang membawa langkah kakiku menuju ibu kota Utsmani ke-2, Edirne.
 date: 2020-02-03
 author: xequoia
-tags:
-  - plesiran
+tags: plesiran
 ---
 
 > Entah apa yang membawa langkah kakiku menuju ibu kota Utsmani ke-2, Edirne. Mungkin dari salah satu artikel di buku belajar bahasa Turki yang menyebutkan keagungan dan kecerdikan Mimar Sinan, perancang Selimiye Camii, ketika diminta oleh Sultan Selim membuatkan masjid atas namanya.
