--- a/posts/prusa-dari-bursa-untuk-bangsa.mdx
+++ b/posts/prusa-dari-bursa-untuk-bangsa.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618834927/a
 excerpt: 'Perhimpunan Pelajar Indonesia di Bursa-Turki (PPI Bursa) telah sukses melaksanakan kegiatan berbasis pengabdian masyarakat bernama Pelajar Bursa untuk Indonesia (PRUSA) pada tanggal 16-22 Agustus 2019 di Desa Mekarmanik, Kabupaten Lebak, Provinsi Banten..'
 date: 2021-04-19
 author: annfir
-tags:
-  - news
+tags: news
 ---
 
 Perhimpunan Pelajar Indonesia di Bursa-Turki (PPI Bursa) telah sukses melaksanakan kegiatan berbasis pengabdian masyarakat bernama Pelajar Bursa untuk Indonesia (PRUSA) pada tanggal 16-22 Agustus 2019 di Desa Mekarmanik, Kabupaten Lebak, Provinsi Banten. Kegiatan sepekan lamanya ini, merupakan program kerja tahunan Divisi Sosial, Budaya, dan Olahraga PPI Bursa yang ditargetkan untuk membangun desa-desa tertinggal sebagai bentuk pengabdian mahasiswa diaspora di Bursa untuk Indonesia. Dalam susunan kepanitiaannya, PRUSA juga terbuka pada mahasiswa di luar wilayah Bursa untuk menjadi relawan. Bersama-sama, 28 panitia dan 15 relawan menyukseskan kegiatan perdana PRUSA. Dalam kesempatan ini juga dihadirkan tamu undangan dari Turki sejumlah empat orang yaitu; Erol Öztamur (Founder International Damla Association), Umut Kılıç (Co-Founder International Damla Association), Canan Çakır (Guru SMA Internasional Imam Hatip) dan Meryem Ğülce (Siswa Bursa Nilüfer NOSAB).
