--- a/posts/sejarah-vaksin-dunia.mdx
+++ b/posts/sejarah-vaksin-dunia.mdx
@@ -6,8 +6,7 @@ featuredimageurl: https://images.unsplash.com/photo-1605377347958-e8bd4c00ba1d?i
 excerpt: Akhir Desember 2019, dunia digemparkan dengan penemuan virus yang dapat menyebar dengan cepat. Kasus pertama terjadi di Kota Wuhan, Cina. Virus itu bernama virus corona atau 2019-nCoV.
 date: 2021-04-05
 author: dammy
-tags:
-  - knowledge
+tags: knowledge
 ---
 
 Akhir Desember 2019, dunia digemparkan dengan penemuan virus yang dapat menyebar dengan cepat. Kasus pertama terjadi di Kota Wuhan, Cina. Virus itu bernama virus corona atau 2019-nCoV. Pada 2 Maret 2020, untuk pertama kalinya pemerintah mengumumkan dua kasus pasien positif COVID-19 di Indonesia. Namun beberapa pakar memperkirakan virus corona sudah masuk ke Indonesia sejak Januari 2020. Hingga Kamis, 1 April 2021 tercatat sudah 2,81 juta jiwa korban dari virus corona di seluruh dunia. Dengan total kasus mencapai 129 juta dan angka kesembuhan mencapai 73 juta. Virus corona ini benar-benar menjadi perhatian seluruh dunia, di mana semua negara bahu membahu untuk segera menemukan solusi untuk menyelamatkan umat manusia dari serangan virus corona. Salah satu solusi yang terbaik adalah dengan menemukan vaksin guna menghentikan bertambahnya korban jiwa akibat virus corona. Hingga kini sudah banyak kolaborasi antarnegara dan perusahaan farmasi untuk menemukan vaksin virus corona. Kolaborasi dan kerja sama itu sudah menghasilkan beberapa produk vaksin virus corona seperti Oxford-AstraZeneca, Sinopharm, Moderna, Novavax, Pfizer-BioNTech, dan Sinovac.
