--- a/posts/spring-fragrances-2021.mdx
+++ b/posts/spring-fragrances-2021.mdx
@@ -6,8 +6,7 @@ featuredimageurl: https://images.unsplash.com/photo-1462275646964-a0e3386b89fa?i
 excerpt: 'Halo, Sobat Ya! Tak terasa kini kita telah memasuki bulan April di tahun 2021. Spring time is coming!!! Meski masa pandemi belum berakhir, semoga perpaduan aroma bunga dan tanah kering yang dijatuhi hujan musim semi ditemani dengan minuman hangat dapat memperbaiki mood Sobat Ya!, yah'
 date: 2021-04-11
 author: ahsanah-nur-amalia
-tags:
-  - lifestyle
+tags: lifestyle
 ---
 
 Halo, _Sobat Ya!_ Tak terasa kini kita telah memasuki bulan April di tahun 2021. _Spring time is coming_!!! Meski masa pandemi belum berakhir, semoga perpaduan aroma bunga dan tanah kering yang dijatuhi hujan musim semi ditemani dengan minuman hangat dapat memperbaiki _mood Sobat Ya!,_ yah😊. Nah, untuk menjaga aroma tubuh tetap segar dan suasana hati tetap senang selama menjalani aktivitas, memakai wewangian dengan aroma favoritmu dapat membantu, lho. Bagi kalian yang masih mencari aroma favorit atau yang ingin mencoba aroma baru, ini dia beberapa rekomendasi _body mist_ dan parfum yang dapat kalian coba di musim semi ini. Selamat mencoba!
