--- a/posts/welcoming-ramadhan.mdx
+++ b/posts/welcoming-ramadhan.mdx
@@ -7,8 +7,7 @@ featuredimageurl: 'https://images.unsplash.com/photo-1570206913724-17f67ed3a6d6?
 excerpt: 'Hai, Sobat Ya! Bulan ini sudah masuk bulan Rajab, loh. Waktu cepat sekali ya jalannya, udah mau masuk bulan Ramadhan aja nih. Kira-kira Ramadhan tahun ini bagi sobat Ya! akan seperti apa nih?'
 date: 2021-04-01
 author: jovita-yosandra
-tags:
-  - lifestyle
+tags: lifestyle
 ---
 
 Hai, Sobat Ya! Bulan ini sudah masuk bulan Rajab, loh. Waktu cepat sekali ya jalannya, udah mau masuk bulan Ramadhan aja nih. Kira-kira Ramadhan tahun ini bagi sobat Ya! akan seperti apa nih? Tentunya harus lebih baik lagi dong dari Ramadhan sebelumnya. Supaya ibadahnya bisa semakin optimal, singgah sebentar ke healthy lifestyle selama Ramadhan, yuk.
