--- a/posts/menghadapi-fenomena-malas-menulis.mdx
+++ b/posts/menghadapi-fenomena-malas-menulis.mdx
@@ -6,8 +6,7 @@ featuredimageurl: https://images.unsplash.com/photo-1455390582262-044cdead277a?i
 excerpt: Dalam keseharian kita, para jurnalis yang terlibat di dunia tulis-menulis pasti akan mengalami masa di mana mood untuk membuat karya tulis menurun.
 date: 2020-02-03
 author: hisyam-azhari
-tags:
-  - opini
+tags: opini
 ---
 
 Dalam keseharian kita, para jurnalis yang terlibat di dunia tulis-menulis pasti akan mengalami masa di mana mood untuk membuat karya tulis menurun. Gejala ini disebut sindrom males atau writer’s block. Fenomena ini umum terjadi pada kalangan penulis, bahkan yang profesional sekalipun. Kemalasan ini seyogyanya tidak diperturutkan, tapi merupakan realitas yang terjadi pada semua orang. Oleh karena itu, kita harus mampu menemukan jalan keluar untuk menghindarkan kita berjalan ke arah jurang kemalasan atau lubang yang jelas-jelas ada di depan kita.
