--- a/posts/vaksin.mdx
+++ b/posts/vaksin.mdx
@@ -6,8 +6,7 @@ featuredimageurl: https://images.pexels.com/photos/2652088/pexels-photo-2652088.
 excerpt: 'Jika boleh memberikan saran, kenapa sobat hanya fokus memberikan vaksin pada penyakit yang merenggut jiwa manusia? Bagaimana dengan vaksin yang mengikis akhlak manusia? Bukankah itu juga penting untuk keberlangsungan hidup ratusan juta jiwa yang lainnya?'
 date: 2021-04-11
 author: aksara-gedrik
-tags:
-  - religion
+tags: religion
 ---
 
 Bismillahirrahmanirrahim...
