modify card, hero images, and fix fonts

--- a/posts/jangan-kuliah-di-turki.mdx
+++ b/posts/jangan-kuliah-di-turki.mdx
@@ -4,7 +4,7 @@ title: 'Peringatan: Jangan Kuliah di Turki'
 featuredpost: true
 featuredimage: ''
 featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618834927/articles%20pictures/uludag-min_ipnsai.jpg'
-excerpt: 'Pergi kuliah ke luar negeri ternyata tak seindah yang dibayangkan. Pergi kuliah ke luar negeri juga tak seindah foto di Instagram. Kuliah di luar negeri tak semudah yang diiklankan agen-agen yang kurang bertanggung jawab.'
+excerpt: 'Pergi kuliah ke luar negeri ternyata tak seindah yang dibayangkan. Pergi kuliah ke luar negeri juga tak seindah foto di Instagram.'
 date: 2021-04-19
 author: dammy
 tags: opini
