--- a/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
+++ b/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
@@ -3,7 +3,7 @@ slug: jejak-sang-pencinta-sejati-di-bursa
 title: Jejak Sang Pencinta Sejati di Bursa
 featuredpost: false
 featuredimage: /images/jejak-sang-pencinta-sejati-di-bursa.png
-excerpt: Dalam kehidupan kita, banyak sekali hal-hal yang dapat kita lakukan untuk sekedar melarikan diri dari penatnya rutinitas yang kita jalani sehari-hari.
+excerpt: 'Dalam kehidupan kita, banyak sekali hal-hal yang dapat kita lakukan untuk sekedar melarikan diri dari penatnya rutinitas yang kita jalani sehari-hari.'
 date: 2019-03-02
 author: ahsanah-nur-amalia
 tags: plesiran
