--- a/posts/pahlawan-tanah-pasundan.mdx
+++ b/posts/pahlawan-tanah-pasundan.mdx
@@ -4,7 +4,7 @@ title: 'Pahlawan Tanah Pasundan'
 featuredpost: false
 featuredimage: ''
 featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1619416576/articles%20pictures/Raden_Dewi_Sartika_tozsdc.jpg'
-excerpt: 'Peringatan Hari Kartini yang jatuh pada 21 April semoga benar-benar dimaknai lebih dalam dari ucapan “Selamat Hari Kartini. Perilaku, semangat, dan kemandirian Kartini semoga bisa menjadi dorongan untuk wanita-wanita Indonesia untuk berkarya.'
+excerpt: 'Peringatan Hari Kartini yang jatuh pada 21 April semoga benar-benar dimaknai lebih dalam dari ucapan “Selamat Hari Kartini.'
 date: 2021-04-26
 author: ghoniyyah-salma
 tags: knowledge
