--- a/posts/vaksin.mdx
+++ b/posts/vaksin.mdx
@@ -3,7 +3,7 @@ slug: 'vaksin'
 title: 'Vaksin'
 featuredpost: true
 featuredimageurl: https://images.pexels.com/photos/2652088/pexels-photo-2652088.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
-excerpt: 'Jika boleh memberikan saran, kenapa sobat hanya fokus memberikan vaksin pada penyakit yang merenggut jiwa manusia? Bagaimana dengan vaksin yang mengikis akhlak manusia? Bukankah itu juga penting untuk keberlangsungan hidup ratusan juta jiwa yang lainnya?'
+excerpt: 'Jika boleh memberikan saran, kenapa sobat hanya fokus memberikan vaksin pada penyakit yang merenggut jiwa manusia? Bagaimana dengan vaksin yang mengikis akhlak manusia?'
 date: 2021-04-11
 author: aksara-gedrik
 tags: religion
