--- a/posts/aturan-baru-bea-cukai.mdx
+++ b/posts/aturan-baru-bea-cukai.mdx
@@ -4,7 +4,7 @@ title: 'Aturan Baru Bea Cukai'
 featuredpost: false
 featuredimage: ''
 featuredimageurl: 'https://images.unsplash.com/photo-1578335371893-da19ce4ba0cc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80'
-excerpt: 'Berbelanja barang dari luar negeri? Mengirim barang masuk ke Indonesia? Sobat Ya! pernah melakukannya? Kalau pernah, artikel ini cocok dibaca sambil nge-cay di sore hari. Atau kapanpun artikel ini enak dibaca. Siapa tahu dengan artikel ini bisa menambah wawasan kita semua.'
+excerpt: 'Berbelanja barang dari luar negeri? Mengirim barang masuk ke Indonesia? Siapa tahu dengan artikel ini bisa menambah wawasan kita semua.'
 date: 2021-04-19
 author: hisyam-azhari
 tags: opini
