--- a/posts/geisha-penghibur-yang-sering-disalah-artikan.mdx
+++ b/posts/geisha-penghibur-yang-sering-disalah-artikan.mdx
@@ -2,7 +2,7 @@
 slug: 'geisha-penghibur-yang-sering-disalah-artikan'
 title: 'Geisha, Penghibur yang Sering Disalah Artikan'
 featuredpost: true
-excerpt: 'Mendengar kata Geisha, sering kali yang terbayang di pikiran kita adalah para perempuan Jepang yang mengenakan Kimono dengan riasan wajah putih. Sering kali juga profesi Geisha dipandang negatif oleh masyarakat karena cenderung diartikan sebagai prostitusi. Padahal kenyataannya, tidak seperti itu.'
+excerpt: 'Mendengar kata Geisha, sering kali yang terbayang di pikiran kita adalah para perempuan Jepang yang mengenakan Kimono dengan riasan wajah putih.'
 featuredimageurl: 'https://images.unsplash.com/photo-1600027723567-ca095700f2f1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80'
 date: 2021-05-06
 author: himura-taiyou
