--- a/posts/spring-fragrances-2021.mdx
+++ b/posts/spring-fragrances-2021.mdx
@@ -3,7 +3,7 @@ slug: 'spring-fragrances-2021'
 title: 'Spring Fragrances 2021'
 featuredpost: false
 featuredimageurl: https://images.unsplash.com/photo-1462275646964-a0e3386b89fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80
-excerpt: 'Halo, Sobat Ya! Tak terasa kini kita telah memasuki bulan April di tahun 2021. Spring time is coming!!! Meski masa pandemi belum berakhir, semoga perpaduan aroma bunga dan tanah kering yang dijatuhi hujan musim semi ditemani dengan minuman hangat dapat memperbaiki mood Sobat Ya!, yah'
+excerpt: 'Spring time is coming!!! Meski masa pandemi belum berakhir, semoga perpaduan aroma bunga dan tanah kering yang dijatuhi hujan musim semi ditemani dengan minuman hangat dapat memperbaiki mood Sobat Ya!, yah'
 date: 2021-04-11
 author: ahsanah-nur-amalia
 tags: lifestyle
