add 3 articles and fix paragraph in art articles

--- a/posts/bunga-yang-gugur-di-bulan-tiga.mdx
+++ b/posts/bunga-yang-gugur-di-bulan-tiga.mdx
@@ -6,18 +6,18 @@ author: annfir
 tags: art
 ---
 
-Selalu ada dalam doanya
-Untuk bertemu Tuhan pada hari Jumat
-Tapi tak ada dalam bayangannya
-Doanya jatuh pada Jumat tiga bulan tiga
+<div>Selalu ada dalam doanya</div>
+<div>Untuk bertemu Tuhan pada hari Jumat</div>
+<div>Tapi tak ada dalam bayangannya</div>
+<div className='end-p'>Doanya jatuh pada Jumat tiga bulan tiga</div>
 
-Semua bersaudara, yakininya
-Maka saat ia melihat orang angkat senjata
-Darinya bersuara,
-“Hai, saudara.”
+<div>Semua bersaudara, yakininya</div>
+<div>Maka saat ia melihat orang angkat senjata</div>
+<div>Darinya bersuara,</div>
+<div className='end-p'>“Hai, saudara.”</div>
 
-Sedetik kemudian sekelilingnya memerah
-Akibat sosok bermata
-Yang mereka kata manusia
-Yang ia kira saudara
-Tak ayalnya setan yang bersandiwara
+<div>Sedetik kemudian sekelilingnya memerah</div>
+<div>Akibat sosok bermata</div>
+<div>Yang mereka kata manusia</div>
+<div>Yang ia kira saudara</div>
+<div className='end-p'>Tak ayalnya setan yang bersandiwara</div>
