--- a/posts/gaia.mdx
+++ b/posts/gaia.mdx
@@ -6,37 +6,39 @@ author: dammy
 tags: art
 ---
 
-Aku adalah sebersit makna tersembunyi
-Yang memaksa semua orang untuk mengerti
-Aku adalah metaphor yang berdiri sendiri
-Pahami aku, maka aku akan jatuh pada palung diri
+<div>Aku adalah sebersit makna tersembunyi</div>
+<div>Yang memaksa semua orang untuk mengerti</div>
+<div>Aku adalah metaphor yang berdiri sendiri</div>
+<div className='end-p'>Pahami aku, maka aku akan jatuh pada palung diri</div>
 
-Aku adalah jarum di dalam tumpukan jerami
-Jika kau cari dan temukan, kau tidak akan cukup mengerti
-Apa alasan aku ada di dalam sana?
-Dan apa alasan kau merenggutku darinya?
+<div>Aku adalah jarum di dalam tumpukan jerami</div>
+<div>Jika kau cari dan temukan, kau tidak akan cukup mengerti</div>
+<div>Apa alasan aku ada di dalam sana?</div>
+<div className='end-p'>Dan apa alasan kau merenggutku darinya?</div>
 
-Aku adalah apa yang tak terucap
-Memaksa engkau untuk mengecap apa saja yang semestinya meluap
-Aku adalah paksaan itu sendiri
-Membuat kau mamatung dan tak mungkin berlari
+<div>Aku adalah apa yang tak terucap</div>
+<div>Memaksa engkau untuk mengecap apa saja yang semestinya meluap</div>
+<div>Aku adalah paksaan itu sendiri</div>
+<div className='end-p'>Membuat kau mamatung dan tak mungkin berlari</div>
 
-Tapi, di samping itu semua, aku adalah kelembutan
-Yang membawamu ke dalam buaian
-Aku juga adalah persaaan yang tulus
-Walau terkadang sangat bergantung pada fulus
+<div>Tapi, di samping itu semua, aku adalah kelembutan</div>
+<div>Yang membawamu ke dalam buaian</div>
+<div>Aku juga adalah persaaan yang tulus</div>
+<div className='end-p'>Walau terkadang sangat bergantung pada fulus</div>
 
-Aku menyukai kesederhanaan dan keorisinilan
-Yang dalam standarku adalah istana dan gunung bercahaya keemasan
-Aku adalah keindahan itu sendiri
-Jangan coba-coba mencerca, karena itu berarti bunuh diri
+<div>Aku menyukai kesederhanaan dan keorisinilan</div>
+<div>Yang dalam standarku adalah istana dan gunung bercahaya keemasan</div>
+<div>Aku adalah keindahan itu sendiri</div>
+<div className='end-p'>
+  Jangan coba-coba mencerca, karena itu berarti bunuh diri
+</div>
 
-Bagaimanapun aku menurutmu
-Aku adalah aku
-Dengan segenap kekuatan perasaan
-Yang menciptakan digdaya sistem pemerintahan
+<div>Bagaimanapun aku menurutmu</div>
+<div>Aku adalah aku</div>
+<div>Dengan segenap kekuatan perasaan</div>
+<div className='end-p'>Yang menciptakan digdaya sistem pemerintahan</div>
 
-Mau tak mau, kau harus mau
-Untuk tunduk pada kehendak perasaanku
-Karena jika tidak, kamu harus tahu
-Bahwa aku adalah kehendak atas dirimu
+<div>Mau tak mau, kau harus mau</div>
+<div>Untuk tunduk pada kehendak perasaanku</div>
+<div>Karena jika tidak, kamu harus tahu</div>
+<div className='end-p'>Bahwa aku adalah kehendak atas dirimu</div>
