--- a/posts/manuwan.mdx
+++ b/posts/manuwan.mdx
@@ -6,27 +6,31 @@ author: dammy
 tags: art
 ---
 
-Semena-mena manusia bernama hewan
-Menjadikan kebebasan sebagai komoditas dagangan
-Dengan kekuatan dan kekerasan
-Menjamah dan merenggut hak yang Pangeran berikan
+<div>Semena-mena manusia bernama hewan</div>
+<div>Menjadikan kebebasan sebagai komoditas dagangan</div>
+<div>Dengan kekuatan dan kekerasan</div>
+<div className='end-p'>Menjamah dan merenggut hak yang Pangeran berikan</div>
 
-Betapa bodohnya manusia bernama hewan
-Merampas apa yang tidak pernah diberikan
-Bertindak seakan-akan replika Yang Maha Kuasa
-Padahal tanpa daya dan bukan apa-apa
+<div>Betapa bodohnya manusia bernama hewan</div>
+<div>Merampas apa yang tidak pernah diberikan</div>
+<div>Bertindak seakan-akan replika Yang Maha Kuasa</div>
+<div className='end-p'>Padahal tanpa daya dan bukan apa-apa</div>
 
-Betapa lucunya manusia bernama hewan
-Untuk selalu bisa kita lihat di penangkaran
-Bersama-sama seakan mampu menaklukan dunia
-Padahal untuk mengambil nafas saja mereka meronta-ronta
+<div>Betapa lucunya manusia bernama hewan</div>
+<div>Untuk selalu bisa kita lihat di penangkaran</div>
+<div>Bersama-sama seakan mampu menaklukan dunia</div>
+<div className='end-p'>
+  Padahal untuk mengambil nafas saja mereka meronta-ronta
+</div>
 
-Betapa uniknya manusia bernama hewan
-Demi secuil bahan kotoran, membunuh adalah relevan
-Dari mulut kotornya itu keluar kebijaksanaan
-Penuh rekayasa dan pemaksaan
+<div>Betapa uniknya manusia bernama hewan</div>
+<div>Demi secuil bahan kotoran, membunuh adalah relevan</div>
+<div>Dari mulut kotornya itu keluar kebijaksanaan</div>
+<div className='end-p'>Penuh rekayasa dan pemaksaan</div>
 
-Betapa ruginya manusia bernama hewan
-Yang tidak seperti hewan bernama manusia
-Yang mengerti hakikat dari kemerdekaan
-Yang rela berbagi tanpa memandang itu kawan atau lawan
+<div>Betapa ruginya manusia bernama hewan</div>
+<div>Yang tidak seperti hewan bernama manusia</div>
+<div>Yang mengerti hakikat dari kemerdekaan</div>
+<div className='end-p'>
+  Yang rela berbagi tanpa memandang itu kawan atau lawan
+</div>
