--- a/posts/titik-ekstrem-semu.mdx
+++ b/posts/titik-ekstrem-semu.mdx
@@ -6,22 +6,26 @@ author: dammy
 tags: art
 ---
 
-Di nusantara yang abadi
-Di mana penuh dengan ajaran budi pekerti
-Ajaran leluhur yang sangat sakti
-Ajakan penuh untuk saling mengerti
+<div>Di nusantara yang abadi</div>
+<div>Di mana penuh dengan ajaran budi pekerti</div>
+<div>Ajaran leluhur yang sangat sakti</div>
+<div className='end-p'>Ajakan penuh untuk saling mengerti</div>
 
-Di tempat penuh dengan senyuman
-Hangat oleh suasana keramahtamahan
-Riuh oleh ruh keberagaman perbedaan
-Kunci utama rekatnya tali persatuan dan persaudaraan
+<div>Di tempat penuh dengan senyuman</div>
+<div>Hangat oleh suasana keramahtamahan</div>
+<div>Riuh oleh ruh keberagaman perbedaan</div>
+<div className='end-p'>
+  Kunci utama rekatnya tali persatuan dan persaudaraan
+</div>
 
-Di alam untuk saling memahami
-Dalam asuhan khusus ibu bumi
-Ada satu titik ekstrem yang melenyapkan kehangatan mentari
-Satu titik ekstrem, kemarahan tanpa ekspresi
+<div>Di alam untuk saling memahami</div>
+<div>Dalam asuhan khusus ibu bumi</div>
+<div>Ada satu titik ekstrem yang melenyapkan kehangatan mentari</div>
+<div className='end-p'>Satu titik ekstrem, kemarahan tanpa ekspresi</div>
 
-Adalah diam bentuk titik ekstrem itu
-Pembeku hangat mentari yang semu
-Jangan kamu picu pemicu diam itu
-Itu berbahaya untuk kenyamananmu yang juga semu, palsu.
+<div>Adalah diam bentuk titik ekstrem itu</div>
+<div>Pembeku hangat mentari yang semu</div>
+<div>Jangan kamu picu pemicu diam itu</div>
+<div className='end-p'>
+  Itu berbahaya untuk kenyamananmu yang juga semu, palsu.
+</div>
