fix article category and change hero height

--- a/posts/ramadan-pandemic-2.mdx
+++ b/posts/ramadan-pandemic-2.mdx
@@ -6,7 +6,7 @@ featuredimageurl: https://images.unsplash.com/photo-1618383406944-0df8186c3aff?i
 excerpt: 'Ramadhan adalah bulan healing, bulannya memanusiakan manusia. Banyak sekali hal yang bisa kita lakukan dalam memanusiakan diri kita. Terutama ketika masa pandemi seperti ini.'
 date: 2021-05-11
 author: amara-salsabila
-tags: religion
+tags: opini
 ---
 
 <p style={{ textAlign: 'center', fontStyle: 'italic' }}>
