add missing title in article

--- a/posts/mengintip-tradisi-unik-lebaran-di-berbagai-negara.mdx
+++ b/posts/mengintip-tradisi-unik-lebaran-di-berbagai-negara.mdx
@@ -51,6 +51,8 @@ Jika Indonesia memiliki ketupat dan opor sebagai hidangan khas Lebaran, India ta
 
 ![Sholat Ied di Amerika Serikat](https://res.cloudinary.com/yacloud/image/upload/v1621239979/articles%20pictures/lebaran4_oqqjmh.png)
 
+### Suasana Lebaran di Negeri Paman Sam
+
 Seperti yang kita semua ketahui, Islam merupakan agama minoritas yang terdapat di Amerika Serikat. Meskipun begitu, perayaan hari Raya Lebaran di sana tidak kalah meriah dari negara lainnya. Seusai melaksanakan ibadah salat Id, para muslim biasanya akan saling berpelukan dan meminta maaf satu sama lain. Mereka juga akan mengabari kerabat dan keluarga yang jauh melalui ucapan yang ditulis menggunakan pesan maupun melalui berbicara langsung melalui panggilan video.
 
 Karena muslim di Amerika Serikat merupakan imigran yang datang dari berbagai negara di belahan dunia yang berbeda, maka kita akan menemukan sebuah pemandangan yang unik terjadi saat Lebaran. Kalian akan melihat para muslim di sana mengenakan pakaian yang warna-warni sesuai dengan identitas negara asalnya masing-masing. Jika kalian mau mengunjungi rumah penduduk muslim yang ada di sana, kalian juga akan menemukan hidangan yang berbeda-beda di setiap rumah. Kalau beruntung, kalian mungkin bisa menemukan nastar jika bersilaturahmi ke rumah bapak duta besar Indonesia di Amerika Serikat. (shb)
