--- a/posts/mengintip-tradisi-unik-lebaran-di-berbagai-negara.mdx
+++ b/posts/mengintip-tradisi-unik-lebaran-di-berbagai-negara.mdx
@@ -5,7 +5,7 @@ featuredpost: false
 featuredimage: ''
 featuredimageurl: 'https://images.unsplash.com/photo-1620795541878-62d9eaf5b56c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80'
 imgsource: 'unsplash.com/@mufidpwt'
-excerpt: 'Bubur sumsum adalah salah satu makanan Indonesia yang banyak digemari terutama oleh para pencinta makanan manis. Selain teksturnya yang lembut dan rasanya yang manis, bubur sumsum juga memiliki beberapa manfaat.'
+excerpt: 'Suasana Lebaran masih saja terasa meskipun kita sudah sama-sama merayakannya beberapa hari yang lalu. Pasti kamu sudah menerima pertanyaan “kapan naik ke pelaminan?” atau berbagai pertanyaan lainnya yang kadang bikin kepala kita hampir mendidih menanggapinya.'
 date: 2021-05-17
 author: bayu-adji-nugraha
 tags: religion
