update and fix layout in article list and read article

--- a/posts/mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya.mdx
+++ b/posts/mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya.mdx
@@ -48,5 +48,5 @@ Dari tulisan ini kita bisa ambil kesimpulan bahwa wajah Depok yang dulu dengan D
   <br />
   Percaya kok ke babi ngepet?
   <br />
-  (_hiya hiya hiya_)
+  (hiya hiya hiya)
 </p>
