add featured article

--- a/posts/mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya.mdx
+++ b/posts/mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya.mdx
@@ -1,7 +1,7 @@
 ---
 slug: 'mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya'
 title: 'Mengulik Sejarah Depok dan 1000 Alasan untuk Menertawakannya'
-featuredpost: true
+featuredpost: false
 featuredimageurl: https://res.cloudinary.com/yacloud/image/upload/v1620798245/articles%20pictures/depok_syhukw.jpg
 excerpt: 'Seminggu terakhir ini timeline di Twitter dan media sosial lainnya dipenuhi dengan berbagai meme dan tulisan yang mencandai tingkah laku warga Depok. Percayalah Depok, walaupun saya sedikit ikut menertawakan candaan mereka, saya juga bisa merasakan hal yang sedang kalian rasakan sekarang. Jadi, santai saja.'
 date: 2021-05-12
