add footer, about us page, and images

--- a/posts/manuwan.mdx
+++ b/posts/manuwan.mdx
@@ -3,6 +3,8 @@ slug: 'manuwan'
 title: 'Manuwan'
 date: 2021-05-06
 author: dammy
+featuredimageurl: 'https://images.unsplash.com/photo-1487260211189-670c54da558d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80'
+imgsource: 'unsplash.com/@emileseguin'
 tags: art
 ---
 
