--- a/posts/suara.mdx
+++ b/posts/suara.mdx
@@ -3,6 +3,8 @@ slug: 'suara'
 title: 'Suara'
 date: 2021-05-11
 author: annfir
+featuredimageurl: 'https://images.unsplash.com/photo-1586830746542-19b25c53497f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=425&q=80'
+imgsource: 'unsplash.com/@allecgomes'
 tags: art
 ---
 
