--- a/posts/gaia.mdx
+++ b/posts/gaia.mdx
@@ -3,6 +3,8 @@ slug: 'gaia'
 title: 'Gaia'
 date: 2021-05-06
 author: dammy
+featuredimageurl: 'https://images.unsplash.com/photo-1517598499378-be07cbf2e1d0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=401&q=80'
+imgsource: 'unsplash.com/@salminenjuuso'
 tags: art
 ---
 
