--- a/posts/titik-ekstrem-semu.mdx
+++ b/posts/titik-ekstrem-semu.mdx
@@ -3,6 +3,8 @@ slug: 'titik-ekstrem-semu'
 title: 'Titik Ekstrem Abadi'
 date: 2021-05-06
 author: dammy
+featuredimageurl: 'https://images.unsplash.com/reserve/aOcWqRTfQ12uwr3wWevA_14401305508_804b300054_o.jpg?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80'
+imgsource: 'unsplash.com/@paulavermeulen'
 tags: art
 ---
 
