--- a/posts/aturan-baru-bea-cukai.mdx
+++ b/posts/aturan-baru-bea-cukai.mdx
@@ -1,10 +1,10 @@
 ---
-slug: 'aturan-baru-bea-cukai'
-title: 'Aturan Baru Bea Cukai'
+slug: "aturan-baru-bea-cukai"
+title: "Aturan Baru Bea Cukai"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://images.unsplash.com/photo-1578335371893-da19ce4ba0cc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80'
-excerpt: 'Berbelanja barang dari luar negeri? Mengirim barang masuk ke Indonesia? Siapa tahu dengan artikel ini bisa menambah wawasan kita semua.'
+featuredimage: ""
+featuredimageurl: "https://images.unsplash.com/photo-1578335371893-da19ce4ba0cc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+excerpt: "Berbelanja barang dari luar negeri? Mengirim barang masuk ke Indonesia? Siapa tahu dengan artikel ini bisa menambah wawasan kita semua."
 date: 2021-04-19
 author: hisyam-azhari
 tags: opini
@@ -31,4 +31,4 @@ Ada pengecualian untuk beberapa komoditas barang masuk. Barang-barang itu adalah
 
 Mengapa barang-barang tersebut mendapat perbedaan? Mengutip situs resmi Bea Cukai RI, hal itu terjadi karena pemerintah menaruh perhatian khusus terhadap masukan dari pengrajin dan produsen barang-barang yang banyak digemari dan banjir dari luar negeri. Direktur Kepabeanan Internasional dan Antar Lembaga, Syarif Hidayat, mengungkapkan “Hal ini mengakibatkan produk tas, sepatu, dan garmen dalam negeri tidak laku. Seperti yang diketahui beberapa sentra pengrajin tas dan sepatu banyak yang gulung tikar dan hanya menjual produk- produk China,”
 
-Jadi, begitulah kira-kira aturan baru dari Bea Cukai RI mengenai pembebasan biaya masuk. Bagi Sobat Ya! yang sedang atau akan membeli barang dari luar negeri ataupun memasukkan barang ke Indonesia, jangan kaget lagi. Informasi lebih rinci dan detail bisa disimak di situs resmi Bea Cukai RI di [http://www.beacukai.go.id](http://www.beacukai.go.id) atau Twitter resmi Bea Cukai RI di @beacukaiRI.
+Jadi, begitulah kira-kira aturan baru dari Bea Cukai RI mengenai pembebasan biaya masuk. Bagi Sobat Ya! yang sedang atau akan membeli barang dari luar negeri ataupun memasukkan barang ke Indonesia, jangan kaget lagi. Informasi lebih rinci dan detail bisa disimak di situs resmi Bea Cukai RI di [https://www.beacukai.go.id](https://www.beacukai.go.id) atau Twitter resmi Bea Cukai RI di @beacukaiRI.
