--- a/posts/once-upon-a-try-virtual-museum.mdx
+++ b/posts/once-upon-a-try-virtual-museum.mdx
@@ -1,10 +1,10 @@
 ---
-slug: 'once-upon-a-try-virtual-museum'
-title: 'Once Upon A Try Virtual Museum'
+slug: "once-upon-a-try-virtual-museum"
+title: "Once Upon A Try Virtual Museum"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://images.unsplash.com/photo-1564408918432-4b93b213cfb5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80'
-excerpt: 'Selama menjalani masa self quarantine, banyak hal yang dapat kita lakukan dirumah saja, salah satunya kita dapat melakukan virtual tour.'
+featuredimage: ""
+featuredimageurl: "https://images.unsplash.com/photo-1564408918432-4b93b213cfb5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80"
+excerpt: "Selama menjalani masa self quarantine, banyak hal yang dapat kita lakukan dirumah saja, salah satunya kita dapat melakukan virtual tour."
 date: 2020-05-01
 author: adinda-pancaring
 tags: plesiran
@@ -38,7 +38,7 @@ Museum ikonik yang terletak di jantung kota London ini merupakan salah satu muse
 
 3.  National Museum of Modern and Contemporary Art - Seoul, Korea Selatan
 
-![http://hisour.com](https://i1.wp.com/www.hisour.com/wp-content/uploads/2019/10/Garden-National-Museum-of-Modern-and-Contemporary-Art-Seoul.jpg?w=960&ssl=1)
+![hisour.com](https://i1.wp.com/www.hisour.com/wp-content/uploads/2019/10/Garden-National-Museum-of-Modern-and-Contemporary-Art-Seoul.jpg?w=960&ssl=1)
 
 Museum ini memperkenalkan seni kontemporer global dengan fasilitas penyimpanan terkini. Salah satu museum populer yang terletak di Korea ini, juga dapat diakses menggunakan virtual tour. Disana kita akan dibawa sampai ke lantai 6 bangunan dan menikmati koleksi-koleksi seni kontemporer korea dan dari seluruh dunia.
 
